5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1712_2504.log
== SUBMITION (2019-05-13 15:16:30) 
-- CODE:
qv = int(input())
pl = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < 2 * cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)
	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.152012
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2504/main.py", line 6, in <module>
    cql = ql
NameError: name 'ql' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:16:44) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < 2 * cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)
	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.161846
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
